--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,68 @@
       </ul>
     </header>
 
+    <main>
+      <section>
+        <h2>Наши работы</h2>
+        <ul>
+          <li><a href="#">Все</a></li>
+          <li><a href="#">Веб-сайты</a></li>
+          <li><a href="#">Приложения</a></li>
+          <li><a href="#">Дизайн</a></li>
+          <li><a href="#">Маркетинг</a></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <img src="./images/img1.jpg" alt="Картинка" />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="Картинка" />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="Картинка" />
+            <h3>Ресторан Seafood</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/img4.jpg" alt="Картинка" />
+            <h3>Проект Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="" alt="Картинка" />
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="" alt="Картинка" />
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="" alt="Картинка" />
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="" alt="Картинка" />
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="" alt="Картинка" />
+            <h3></h3>
+            <p></p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
     <footer>
       <a href="/"> WebStudio </a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
