--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 
         <ul class="site-nav">
           <li>
-            <a href="#">Студия</a>
+            <a href="" class="link">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
       <ul class="auth-nav">
         <li>
-          <a href="mailto:info@example.com">info@devstudio.com</a>
+          <a href="mailto:info@example.com" class="link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380991111111">+380961111111</a>
+          <a href="tel:+380991111111" class="link">+380961111111</a>
         </li>
       </ul>
     </header>
     <main>
       <section class="hero">
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1 class="subject">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
       <section>
         <h2>Наше преимущество</h2>
@@ -112,7 +112,7 @@
       </section>
     </main>
     <footer>
-      <a href="/"> WebStudio </a>
+      <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
         <li>
