--- a/portfolio.html
+++ b/portfolio.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Портфолио</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo"
+          ><span class="accent">Web</span>Studio</a
+        >
+        <ul class="site-nav">
           <li>
-            <a href="#">Студия</a>
+            <a href="#" class="link">Студия</a>
           </li>
           <li>
-            <a href="#">Портфолио</a>
+            <a href="#" class="link">Портфолио</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="#" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -35,68 +37,68 @@
 
     <main>
       <section>
-        <h2>Наши работы</h2>
+        <h1>Наши работы</h1>
         <ul>
-          <li><a href="#">Все</a></li>
-          <li><a href="#">Веб-сайты</a></li>
-          <li><a href="#">Приложения</a></li>
-          <li><a href="#">Дизайн</a></li>
-          <li><a href="#">Маркетинг</a></li>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
         </ul>
       </section>
       <section>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="Картинка" />
+            <img src="./images/img1.jpg" alt="Картинка" width="370" />
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="Картинка" />
+            <img src="./images/img2.jpg" alt="Картинка" width="370" />
             <h3>Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Картинка" />
+            <img src="./images/img3.jpg" alt="Картинка" width="370" />
             <h3>Ресторан Seafood</h3>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="Картинка" />
+            <img src="./images/img4.jpg" alt="Картинка" width="370" />
             <h3>Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="" alt="Картинка" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/img5.jpg" alt="Картинка" width="370" />
+            <h3>Проект Boxes</h3>
+            <p>Приложение</p>
           </li>
           <li>
-            <img src="" alt="Картинка" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/img6.jpg" alt="Картинка" width="370" />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="" alt="Картинка" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/img7.jpg" alt="Картинка" width="370" />
+            <h3>Издание Limited Edition</h3>
+            <p>Дизайн</p>
           </li>
           <li>
-            <img src="" alt="Картинка" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/img8.jpg" alt="Картинка" width="370" />
+            <h3>Проект LAB</h3>
+            <p>Маркетинг</p>
           </li>
           <li>
-            <img src="" alt="Картинка" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/img9.jpg" alt="Картинка" width="370" />
+            <h3>Growing Business</h3>
+            <p>Приложение</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="/"> WebStudio </a>
+      <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <address>
         <a href="mailto:info@example.com">info@example.com</a>
