Added styles and text markup

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -38,32 +44,32 @@
         <h1 class="subject">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="section">
         <h2>Наше преимущество</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="section-title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="section-title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="section-title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="section-title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -72,7 +78,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="heading">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
@@ -86,7 +92,7 @@
         </ul>
       </section>
       <section class="section-team">
-        <h2>Наша команда</h2>
+        <h2 class="heading">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/Team1.jpg" alt="Игорь Демьяненко" width="270" />
@@ -111,7 +117,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="page-footer">
       <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
