--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -38,66 +44,93 @@
     <main>
       <section>
         <h1>Наши работы</h1>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="filter">
+          <li><button type="button" class="button">Все</button></li>
+          <li><button type="button" class="button">Веб-сайты</button></li>
+          <li><button type="button" class="button">Приложения</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
       </section>
+
       <section>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="Картинка" width="370" />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <a href="">
+              <img src="./images/img1.jpg" alt="Картинка" width="370" />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img2.jpg" alt="Картинка" width="370" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <a href="">
+              <img src="./images/img2.jpg" alt="Картинка" width="370" />
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img3.jpg" alt="Картинка" width="370" />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <a href="">
+              <img src="./images/img3.jpg" alt="Картинка" width="370" />
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img4.jpg" alt="Картинка" width="370" />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <a href="">
+              <img src="./images/img4.jpg" alt="Картинка" width="370" />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img5.jpg" alt="Картинка" width="370" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <a href="">
+              <img src="./images/img5.jpg" alt="Картинка" width="370" />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img6.jpg" alt="Картинка" width="370" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <a href="">
+              <img src="./images/img6.jpg" alt="Картинка" width="370" />
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img7.jpg" alt="Картинка" width="370" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <a href="">
+              <img src="./images/img7.jpg" alt="Картинка" width="370" />
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img8.jpg" alt="Картинка" width="370" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <a href="">
+              <img src="./images/img8.jpg" alt="Картинка" width="370" />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
+
           <li>
-            <img src="./images/img9.jpg" alt="Картинка" width="370" />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <a href="">
+              <img src="./images/img9.jpg" alt="Картинка" width="370" />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
+    <footer class="page-footer">
       <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <address>
