--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <header class="page-header">
       <nav>
-        <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
+        <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
 
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li>
             <a href="" class="link">Студия</a>
           </li>
@@ -30,7 +30,7 @@
           </li>
         </ul>
       </nav>
-      <ul class="auth-nav">
+      <ul class="auth-nav list">
         <li>
           <a href="mailto:info@example.com" class="link">info@devstudio.com</a>
         </li>
@@ -46,31 +46,31 @@
       </section>
       <section class="section">
         <h2>Наше преимущество</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="section-title">Внимание к деталям</h3>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="section-title">Пунктуальность</h3>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="section-title">Планирование</h3>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="section-title">Современные технологии</h3>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -79,7 +79,7 @@
       </section>
       <section>
         <h2 class="heading">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
           </li>
@@ -93,39 +93,39 @@
       </section>
       <section class="section-team">
         <h2 class="heading">Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/Team1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="user">Игорь Демьяненко</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./images/Team2.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="user">Ольга Репина</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/Team3.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="user">Николай Тарасов</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./images/Team4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="user">Михаил Ермаков</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="page-footer">
-      <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <ul>
+      <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
+      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+      <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@example.com">info@example.com</a>
+          <a href="mailto:info@example.com" class="link">info@example.com</a>
         </li>
         <li>
-          <a href="tel:+380991111111">+380991111111</a>
+          <a href="tel:+380991111111" class="link">+380991111111</a>
         </li>
       </ul>
     </footer>
