--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,12 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo link"
           ><span class="accent">Web</span>Studio</a
         >
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li>
-            <a href="#" class="link">Студия</a>
+            <a href="./index.html" class="link">Студия</a>
           </li>
           <li>
             <a href="#" class="link">Портфолио</a>
@@ -31,12 +31,12 @@
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@example.com">info@devstudio.com</a>
+          <a href="mailto:info@example.com" class="link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380991111111">+380961111111</a>
+          <a href="tel:+380991111111" class="link">+380961111111</a>
         </li>
       </ul>
     </header>
@@ -44,86 +44,96 @@
     <main>
       <section>
         <h1>Наши работы</h1>
-        <ul class="filter">
-          <li><button type="button" class="button">Все</button></li>
-          <li><button type="button" class="button">Веб-сайты</button></li>
-          <li><button type="button" class="button">Приложения</button></li>
-          <li><button type="button" class="button">Дизайн</button></li>
-          <li><button type="button" class="button">Маркетинг</button></li>
+        <ul class="filter list">
+          <li>
+            <button type="button" class="button pointer">Все</button>
+          </li>
+          <li>
+            <button type="button" class="button pointer">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button" class="button pointer">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="button pointer">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="button pointer">Маркетинг</button>
+          </li>
         </ul>
       </section>
 
-      <section>
-        <ul>
+      <section class="section-content">
+        <ul class="list">
           <li>
             <a href="">
               <img src="./images/img1.jpg" alt="Картинка" width="370" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="more">Технокряк</h2>
+              <p class="preview">Веб-сайт</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img2.jpg" alt="Картинка" width="370" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="more">Постер New Orlean vs Golden Star</h2>
+              <p class="preview">Дизайн</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img3.jpg" alt="Картинка" width="370" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="more">Ресторан Seafood</h2>
+              <p class="preview">Приложение</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img4.jpg" alt="Картинка" width="370" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="more">Проект Prime</h2>
+              <p class="preview">Маркетинг</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img5.jpg" alt="Картинка" width="370" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="more">Проект Boxes</h2>
+              <p class="preview">Приложение</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img6.jpg" alt="Картинка" width="370" />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="more">Inspiration has no Borders</h2>
+              <p class="preview">Веб-сайт</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img7.jpg" alt="Картинка" width="370" />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="more">Издание Limited Edition</h2>
+              <p class="preview">Дизайн</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img8.jpg" alt="Картинка" width="370" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="more">Проект LAB</h2>
+              <p class="preview">Маркетинг</p>
             </a>
           </li>
 
           <li>
             <a href="">
               <img src="./images/img9.jpg" alt="Картинка" width="370" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="more">Growing Business</h2>
+              <p class="preview">Приложение</p>
             </a>
           </li>
         </ul>
@@ -131,12 +141,16 @@
     </main>
 
     <footer class="page-footer">
-      <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+380991111111</a>
-      </address>
+      <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
+      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+      <ul class="auth-nav list">
+        <li>
+          <a href="mailto:info@example.com" class="link">info@example.com</a>
+        </li>
+        <li>
+          <a href="tel:+380991111111" class="link">+380991111111</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
