--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
       <section class="section-content">
         <ul class="list">
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img1.jpg" alt="Картинка" width="370" />
               <h2 class="more">Технокряк</h2>
               <p class="preview">Веб-сайт</p>
@@ -74,7 +74,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img2.jpg" alt="Картинка" width="370" />
               <h2 class="more">Постер New Orlean vs Golden Star</h2>
               <p class="preview">Дизайн</p>
@@ -82,7 +82,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img3.jpg" alt="Картинка" width="370" />
               <h2 class="more">Ресторан Seafood</h2>
               <p class="preview">Приложение</p>
@@ -90,7 +90,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img4.jpg" alt="Картинка" width="370" />
               <h2 class="more">Проект Prime</h2>
               <p class="preview">Маркетинг</p>
@@ -98,7 +98,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img5.jpg" alt="Картинка" width="370" />
               <h2 class="more">Проект Boxes</h2>
               <p class="preview">Приложение</p>
@@ -106,7 +106,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img6.jpg" alt="Картинка" width="370" />
               <h2 class="more">Inspiration has no Borders</h2>
               <p class="preview">Веб-сайт</p>
@@ -114,7 +114,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img7.jpg" alt="Картинка" width="370" />
               <h2 class="more">Издание Limited Edition</h2>
               <p class="preview">Дизайн</p>
@@ -122,7 +122,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img8.jpg" alt="Картинка" width="370" />
               <h2 class="more">Проект LAB</h2>
               <p class="preview">Маркетинг</p>
@@ -130,7 +130,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/img9.jpg" alt="Картинка" width="370" />
               <h2 class="more">Growing Business</h2>
               <p class="preview">Приложение</p>
