--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="page-header">
-      <nav>
-        <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
-
+    <header class="container page-header">
+      <nav class="main-nav">
+        <a href="/" class="logo link"><span class="accent">Web</span>Studio </a>
         <ul class="site-nav list">
           <li>
             <a href="" class="link">Студия</a>
@@ -30,14 +33,18 @@
           </li>
         </ul>
       </nav>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@example.com" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="link">+380961111111</a>
-        </li>
-      </ul>
+      <div class="link-nav">
+        <ul class="auth-nav list">
+          <li>
+            <a href="mailto:info@example.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="link">+380961111111</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <section class="hero">
@@ -45,76 +52,101 @@
         <button type="button" class="button">Заказать услугу</button>
       </section>
       <section class="section">
-        <h2>Наше преимущество</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="hidden">Наше преимущество</h2>
+          <ul class="list">
+            <li class="item">
+              <h3 class="section-title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li class="item">
+            <li>
+              <h3 class="section-title">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="heading">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
-          </li>
-          <li>
-            <img src="./images/box2.jpg" alt="Примеры работ" width="370" />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Примеры работ" width="370" />
-          </li>
-        </ul>
+      <section class="section-icon">
+        <div class="container">
+          <h2 class="heading">Чем мы занимаемся</h2>
+          <div class="flex-container">
+          <ul class="list">
+            <div class="flex-element">
+            <li>
+              <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
+            </li>
+            </div>
+            <div class="flex-element">
+            <li>
+              <img src="./images/box2.jpg" alt="Примеры работ" width="370" />
+            </li>
+            </div>
+            <div class="flex-element">
+            <li>
+              <img src="./images/box3.jpg" alt="Примеры работ" width="370" />
+            </li>
+            </div>
+          </ul>
+          </div>
+        </div>
       </section>
       <section class="section-team">
-        <h2 class="heading">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/Team1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="user">Игорь Демьяненко</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/Team2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="user">Ольга Репина</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/Team3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="user">Николай Тарасов</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/Team4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="user">Михаил Ермаков</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading">Наша команда</h2>
+          <div class="team-container">
+          <ul class="list">
+            <div class="team-element">
+            <li>
+              <img
+                src="./images/Team1.jpg" alt="Игорь Демьяненко" width="270" />
+              <h3 class="user">Игорь Демьяненко</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            </div>
+            <div class="team-element">
+            <li>
+              <img src="./images/Team2.jpg" alt="Ольга Репина" width="270" />
+              <h3 class="user">Ольга Репина</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            </div>
+            <div class="team-element">
+            <li>
+              <img src="./images/Team3.jpg" alt="Николай Тарасов" width="270" />
+              <h3 class="user">Николай Тарасов</h3>
+              <p class="text">Marketing</p>
+            </li>
+            </div>
+            <div class="team-element">
+            <li>
+              <img src="./images/Team4.jpg" alt="Михаил Ермаков" width="270" />
+              <h3 class="user">Михаил Ермаков</h3>
+              <p class="text">UI Designer</p>
+            </li>
+            </div>
+          </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
