--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="container page-header">
+      <nav class="main-nav">
         <a href="./index.html" class="logo link"
           ><span class="accent">Web</span>Studio</a
         >
@@ -31,36 +35,42 @@
           </li>
         </ul>
       </nav>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@example.com" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="link">+380961111111</a>
-        </li>
-      </ul>
+      <div class="link-nav">
+        <ul class="auth-nav list">
+          <li>
+            <a href="mailto:info@example.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="link">+380961111111</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
-      <section>
-        <h1>Наши работы</h1>
-        <ul class="filter list">
-          <li>
-            <button type="button" class="button pointer">Все</button>
-          </li>
-          <li>
-            <button type="button" class="button pointer">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="button pointer">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="button pointer">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="button pointer">Маркетинг</button>
-          </li>
-        </ul>
+      <section class="section">
+        <h1 class="hidden">Наши работы</h1>
+        <div class="link-container">
+          <ul class="filter list">
+            <li class="item">
+              <button type="button" class="button pointer">Все</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Веб-сайты</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Приложения</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-content">
