--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
-            </li class="item">
-            <li>
+            </li>
+            <li class="item">
               <h3 class="section-title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -89,62 +89,63 @@
       <section class="section-icon">
         <div class="container">
           <h2 class="heading">Чем мы занимаемся</h2>
-          <div class="flex-container">
-          <ul class="list">
-            <div class="flex-element">
+
+          <ul class="list-icon">
             <li>
               <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
             </li>
-            </div>
-            <div class="flex-element">
+
             <li>
               <img src="./images/box2.jpg" alt="Примеры работ" width="370" />
             </li>
-            </div>
-            <div class="flex-element">
+
             <li>
               <img src="./images/box3.jpg" alt="Примеры работ" width="370" />
             </li>
-            </div>
           </ul>
-          </div>
         </div>
       </section>
       <section class="section-team">
         <div class="container">
           <h2 class="heading">Наша команда</h2>
           <div class="team-container">
-          <ul class="list">
-            <div class="team-element">
-            <li>
-              <img
-                src="./images/Team1.jpg" alt="Игорь Демьяненко" width="270" />
-              <h3 class="user">Игорь Демьяненко</h3>
-              <p class="text">Product Designer</p>
-            </li>
-            </div>
-            <div class="team-element">
-            <li>
-              <img src="./images/Team2.jpg" alt="Ольга Репина" width="270" />
-              <h3 class="user">Ольга Репина</h3>
-              <p class="text">Frontend Developer</p>
-            </li>
-            </div>
-            <div class="team-element">
-            <li>
-              <img src="./images/Team3.jpg" alt="Николай Тарасов" width="270" />
-              <h3 class="user">Николай Тарасов</h3>
-              <p class="text">Marketing</p>
-            </li>
-            </div>
-            <div class="team-element">
-            <li>
-              <img src="./images/Team4.jpg" alt="Михаил Ермаков" width="270" />
-              <h3 class="user">Михаил Ермаков</h3>
-              <p class="text">UI Designer</p>
-            </li>
-            </div>
-          </ul>
+            <ul class="list">
+              <li>
+                <img
+                  src="./images/Team1.jpg"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                />
+                <h3 class="user">Игорь Демьяненко</h3>
+                <p class="text">Product Designer</p>
+              </li>
+
+              <li>
+                <img src="./images/Team2.jpg" alt="Ольга Репина" width="270" />
+                <h3 class="user">Ольга Репина</h3>
+                <p class="text">Frontend Developer</p>
+              </li>
+
+              <li>
+                <img
+                  src="./images/Team3.jpg"
+                  alt="Николай Тарасов"
+                  width="270"
+                />
+                <h3 class="user">Николай Тарасов</h3>
+                <p class="text">Marketing</p>
+              </li>
+
+              <li>
+                <img
+                  src="./images/Team4.jpg"
+                  alt="Михаил Ермаков"
+                  width="270"
+                />
+                <h3 class="user">Михаил Ермаков</h3>
+                <p class="text">UI Designer</p>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
