--- a/portfolio.html
+++ b/portfolio.html
@@ -161,15 +161,19 @@
     <footer class="page-footer">
       <div class="container">
         <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="auth-nav list">
-          <li>
-            <a href="mailto:info@example.com" class="link">info@example.com</a>
-          </li>
-          <li>
-            <a href="tel:+380991111111" class="link">+380991111111</a>
-          </li>
-        </ul>
+        <div class="address-container">
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="auth-nav list">
+            <li>
+              <a href="mailto:info@example.com" class="link"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380991111111" class="link">+380991111111</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
