--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a href="./index.html" class="link">Студия</a>
             </li>
             <li>
-              <a href="#" class="link">Портфолио</a>
+              <a href="#" class="link current">Портфолио</a>
             </li>
             <li>
               <a href="#" class="link">Контакты</a>
@@ -54,103 +54,163 @@
     </header>
 
     <main>
-      <section class="section">
+      <section class="section section-content">
         <div class="container">
           <h1 class="hidden">Наши работы</h1>
-          <div class="link-container">
-            <ul class="filter list">
-              <li class="item">
-                <button type="button" class="button pointer">Все</button>
-              </li>
-              <li class="item">
-                <button type="button" class="button pointer">Веб-сайты</button>
-              </li>
-              <li class="item">
-                <button type="button" class="button pointer">Приложения</button>
-              </li>
-              <li class="item">
-                <button type="button" class="button pointer">Дизайн</button>
-              </li>
-              <li class="item">
-                <button type="button" class="button pointer">Маркетинг</button>
-              </li>
-            </ul>
-          </div>
+          <ul class="filter list">
+            <li class="item">
+              <button type="button" class="button pointer">Все</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Веб-сайты</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Приложения</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button pointer">Маркетинг</button>
+            </li>
+          </ul>
         </div>
-      </section>
 
-      <section class="section-content">
         <div class="container img-container">
           <ul class="list">
             <li>
               <a href="" class="link">
-                <img src="./images/img1.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Технокряк</h2>
-                <p class="preview">Веб-сайт</p>
+                <img
+                  src="./images/img1.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+
+                <div class="subtitle">
+                  <h2 class="more">Технокряк</h2>
+                  <p class="preview">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img2.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Постер New Orlean vs Golden Star</h2>
-                <p class="preview">Дизайн</p>
+                <img
+                  src="./images/img2.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Постер New Orlean vs Golden Star</h2>
+                  <p class="preview">Дизайн</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img3.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Ресторан Seafood</h2>
-                <p class="preview">Приложение</p>
+                <img
+                  src="./images/img3.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Ресторан Seafood</h2>
+                  <p class="preview">Приложение</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img4.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Проект Prime</h2>
-                <p class="preview">Маркетинг</p>
+                <img
+                  src="./images/img4.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Проект Prime</h2>
+                  <p class="preview">Маркетинг</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img5.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Проект Boxes</h2>
-                <p class="preview">Приложение</p>
+                <img
+                  src="./images/img5.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Проект Boxes</h2>
+                  <p class="preview">Приложение</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img6.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Inspiration has no Borders</h2>
-                <p class="preview">Веб-сайт</p>
+                <img
+                  src="./images/img6.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Inspiration has no Borders</h2>
+                  <p class="preview">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img7.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Издание Limited Edition</h2>
-                <p class="preview">Дизайн</p>
+                <img
+                  src="./images/img7.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Издание Limited Edition</h2>
+                  <p class="preview">Дизайн</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img8.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Проект LAB</h2>
-                <p class="preview">Маркетинг</p>
+                <img
+                  src="./images/img8.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Проект LAB</h2>
+                  <p class="preview">Маркетинг</p>
+                </div>
               </a>
             </li>
 
             <li>
               <a href="" class="link">
-                <img src="./images/img9.jpg" alt="Картинка" width="370" />
-                <h2 class="more">Growing Business</h2>
-                <p class="preview">Приложение</p>
+                <img
+                  src="./images/img9.jpg"
+                  alt="Картинка"
+                  width="370"
+                  height="294"
+                />
+                <div class="subtitle">
+                  <h2 class="more">Growing Business</h2>
+                  <p class="preview">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
