--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </a>
           <ul class="site-nav list">
             <li>
-              <a href="" class="link">Студия</a>
+              <a href="" class="link current">Студия</a>
             </li>
             <li>
               <a href="./portfolio.html" class="link">Портфолио</a>
@@ -97,21 +97,19 @@
       <section class="section">
         <div class="container">
           <h2 class="heading">Чем мы занимаемся</h2>
-          <div class="container-all">
-            <ul class="list">
-              <li>
-                <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
-              </li>
+          <ul class="list">
+            <li class="picture">
+              <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
+            </li>
 
-              <li>
-                <img src="./images/box2.jpg" alt="Примеры работ" width="370" />
-              </li>
+            <li class="picture">
+              <img src="./images/box2.jpg" alt="Примеры работ" width="370" />
+            </li>
 
-              <li>
-                <img src="./images/box3.jpg" alt="Примеры работ" width="370" />
-              </li>
-            </ul>
-          </div>
+            <li class="picture">
+              <img src="./images/box3.jpg" alt="Примеры работ" width="370" />
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section-team">
