--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         <div class="container">
           <h2 class="hidden">Наше преимущество</h2>
           <ul class="list">
-            <li class="item">
+            <li class="benefits-item">
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="benefits-item">
               <h3 class="section-title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="benefits-item">
               <h3 class="section-title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="benefits-item">
               <h3 class="section-title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -123,14 +123,18 @@
                   alt="Игорь Демьяненко"
                   width="270"
                 />
-                <h3 class="user">Игорь Демьяненко</h3>
-                <p class="text">Product Designer</p>
+                <div class="team-subtitle">
+                  <h3 class="user">Игорь Демьяненко</h3>
+                  <p class="text">Product Designer</p>
+                </div>
               </li>
 
               <li>
                 <img src="./images/Team2.jpg" alt="Ольга Репина" width="270" />
-                <h3 class="user">Ольга Репина</h3>
-                <p class="text">Frontend Developer</p>
+                <div class="team-subtitle">
+                  <h3 class="user">Ольга Репина</h3>
+                  <p class="text">Frontend Developer</p>
+                </div>
               </li>
 
               <li>
@@ -139,8 +143,10 @@
                   alt="Николай Тарасов"
                   width="270"
                 />
-                <h3 class="user">Николай Тарасов</h3>
-                <p class="text">Marketing</p>
+                <div class="team-subtitle">
+                  <h3 class="user">Николай Тарасов</h3>
+                  <p class="text">Marketing</p>
+                </div>
               </li>
 
               <li>
@@ -149,8 +155,10 @@
                   alt="Михаил Ермаков"
                   width="270"
                 />
-                <h3 class="user">Михаил Ермаков</h3>
-                <p class="text">UI Designer</p>
+                <div class="team-subtitle">
+                  <h3 class="user">Михаил Ермаков</h3>
+                  <p class="text">UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
