--- a/index.html
+++ b/index.html
@@ -168,19 +168,16 @@
     <footer class="page-footer">
       <div class="container">
         <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
-        <div class="address-container">
-          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-          <ul class="auth-nav list">
-            <li>
-              <a href="mailto:info@example.com" class="link"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380991111111" class="link">+380991111111</a>
-            </li>
-          </ul>
-        </div>
+
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="footer-contact list">
+          <li class="footer-link">
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
+          </li>
+          <li class="footer-link">
+            <a href="tel:+380991111111" class="link">+380991111111</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
