--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
       <section class="section section-content">
         <div class="container">
           <h1 class="hidden">Наши работы</h1>
-          <ul class="filter list">
+          <ul class="filter">
             <li class="item">
               <button type="button" class="button pointer">Все</button>
             </li>
@@ -74,10 +74,8 @@
               <button type="button" class="button pointer">Маркетинг</button>
             </li>
           </ul>
-        </div>
 
-        <div class="container img-container">
-          <ul class="list">
+          <ul class="portfolio-list">
             <li>
               <a href="" class="link">
                 <img
@@ -221,19 +219,16 @@
     <footer class="page-footer">
       <div class="container">
         <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
-        <div class="address-container">
-          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-          <ul class="auth-nav list">
-            <li>
-              <a href="mailto:info@example.com" class="link"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380991111111" class="link">+380991111111</a>
-            </li>
-          </ul>
-        </div>
+
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="footer-contact list">
+          <li>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="link">+380991111111</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
