--- a/portfolio.html
+++ b/portfolio.html
@@ -222,10 +222,10 @@
 
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="footer-contact list">
-          <li>
+          <li class="footer-link">
             <a href="mailto:info@example.com" class="link">info@example.com</a>
           </li>
-          <li>
+          <li class="footer-link">
             <a href="tel:+380991111111" class="link">+380991111111</a>
           </li>
         </ul>
